--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run --browser chrome 'E2E/cypress/e2e/cartAdd.cy.js'"
   },
   "author": "",
   "license": "ISC",
